# gh-stars

./: .env.example  .gitignore  README.md  config.yaml.example  pyproject.toml  test_focus.py
config/: tags.yaml
docs/: architecture.md  implementation_plan.md  requirements.md
tests/: conftest.py  test_ml_tagger.py  test_schema.py  test_sync.py  test_tagger.py  test_tfidf_search.py
